css/style.css
:root {
  --clr-main: #159A9C;
  --clr-main-light: #3CA6A6;
  --clr-white: #FFFFFF;
  --clr-gray: #e5e6e7ce;
  --clr-red: #961818;
  --clr-black: #002333;

}
/* reset */

* {
  margin: 0;
  padding: 0;
}

h1, h2, h3, h4, h5, h6, p, a, input, textarea, ul {
  margin: 0;
  padding: 0;
}

ul {
  list-style-type: none;
}

a {
  text-decoration: none;
}

/* Estilos generales */

body {
  font-family: 'Montserrat', sans-serif;
  background-color: #F2F2F2;
  color: var(--clr-black);
}

/* Estilos de la cabecera */

header {
  position: sticky;
  top: 0;
  background-color: var(--clr-white);
  border-bottom: 1px solid #ddd;
  padding: 1em 3em;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

#logo {
  display: flex;
  align-items: center;
}

#logo h1 {
  display: none;
}

#logo img {
  max-width: 150px;
  height: auto;
}

nav {
  flex-grow: 1;
}

nav ul {
  list-style: none;
  padding: 0;
  margin: 0;
  display: flex;
  justify-content: center;
  gap: 1em;
  align-items: center;
}

.boton-menu {
  width: 100%;
  background: var(--clr-main);
  border: none;
  cursor: pointer;
  font-size: 1em;
  color: white;
  font-weight: 700;

}

.boton-menu.active{
  color: var(--clr-main);
  background-color: white;
  border: var(--clr-black) solid 1px;
}

.boton-menu:hover {
  background-color: var(--clr-black);

}

.carro{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 0;
  padding: 0;
  gap: 10px;
}

.boton-carrito {
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  font-size: 1.2em;
  padding: 0.5rem;
  gap: 10px;
  border-radius: 5px;
}

.boton-carrito #numerito {
  font-size: 1em;
  background-color: white;
  color: var(--clr-main);
  border-radius: 100%;
  width: 25px;
  display: flex;
  justify-content: center;
  align-content: center;
}

.boton-carrito:hover #numerito {
  color: var(--clr-black);
  background-color: white;

}

#totalCarrito {
  font-size: 1em;
  display: flex;
  align-items: center;
  color: var(--clr-black);
  margin: 0;
  padding: 0;
}

/* Estilos de la sección principal */

.titulo{
  margin: 2em 0;
  font-size: 2em;
  align-self: center;
  text-align: center;
}

#contenidoShop {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  gap: 20px;
}

.banner-publicidad{
  margin-top: 2rem;
  width: 100vw;
  box-shadow: 3px 3px 15px 1px #222 ;
}
/* Estilos de los productos */
.producto {
  background-color: var(--clr-white);
  border-radius: 5px;
  border: 1px solid #ddd;
  width: 350px;
  padding: 20px;
  text-align: center;
  box-shadow: 3px 3px 15px 1px #d6d4d4;
 
}

.producto:hover{
  box-shadow: 3px 3px 15px 1px #5CAEBF;
}

.producto img {
  max-width: 100%;
  height: auto;
}

.producto-titulo{
  margin: 1em 0;
}

.producto-precio{
  color: var(--clr-main);
  margin: 0.8em 0;
  font-size: 1.5em;
}

.producto-agregar{
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;

}

.producto .botones{
  display: flex;
  flex-direction: row;
  gap: 10px;
}

/* Estilos del botón (general)*/

button {
  background-color: var(--clr-main);
  color: var(--clr-white);
  border: none;
  padding: 10px 20px;
  cursor: pointer;
  margin-top: 10px;
  width: 50%;
  border-radius: 5px;
  box-sizing: border-box;
}

button:hover{
  background-color: var(--clr-black);

}

.producto-ver {
  background-color: white;
  color: var(--clr-main);
  border: var(--clr-main) solid 1px; 
}

.producto-ver:hover {
  background-color: white;
  color: var(--clr-black);
  border: var(--clr-black) solid 1px; 

}

/* Estilos del modal del carrito */

#modalCarrito {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 1000;
  justify-content: center;
  align-items: center;
}

.carritoContainer{
  background-color: var(--clr-white);
  border-radius: 5px;
  padding: 0 1.5em 1.5em 1.5em;
  width: 80%;
  scrollbar-width: none;
  overflow-y: auto;
  max-height: 80vh;
}

.carritoContainer header {
  background-color: white;
  padding: 1.5em 1em 1em 1em;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  text-align: center;
}

.carritoContainer .eliminar {
  align-items: center;
  margin: 0;
  padding: 0;
  border: none;
  color: var(--clr-black);
  font-size: 1.2em;
  cursor: pointer;
}

.carrito-productos {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  margin-top: 1em;
}

.carrito-producto {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: var(--clr-gray);
  color: var(--clr-main);
  padding: 0.5rem 2rem;
  border-radius: 10px;
}

.carrito-producto-titulo {
  width: 30%;
}
.carrito-producto-imagen {
  width: 4.5rem;
  border-radius: 5px;
}

.carrito-producto small {
  font-size: .75rem;
}

.carrito-acciones {
  border-top: 1px solid #ddd;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 0.5em;
}

.carrito-acciones-vaciar {
  width: 100%;
  background-color: var(--clr-gray);
  padding: 0.6rem;
  border-radius: 5px;
  color: var(--clr-main);
  text-transform: uppercase;
  cursor: pointer;
  margin: 0;
  
}


.favorito{
  background-color: var(--clr-white);
  color: var(--clr-red);
  border: 1px solid var(--clr-red);
  width: 45px;
  padding: 0;
}

.favorito:hover{
  background-color: var(--clr-red);
  color: var(--clr-white);
}

.favorito-activo{
  background-color: var(--clr-red);
  color: var(--clr-white);
}

.carrito-producto-cantidad {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.contenedor-cantidades{
  display: flex;
  gap: 1rem;
  align-items: center;

}


.carrito-acciones-vaciar:hover{
  color: #d6d4d4;
}

.carrito-acciones-derecha {
  display: flex;
  justify-content: center;
  margin: 0.5em 0;
}
/* ... */

